# smashquiz

./: .mise.toml  README.md  biome.json  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: index.scss  index.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  smashquiz.rs
src/pages/: Admin.tsx  ScoreBoard.tsx
src/pages/admin/: Admin.tsx
src/res/values/: colors.ts
src/res/widgets/: RuleForm.tsx  SelectionTile.tsx  Submit.tsx
